# RP2040-ENC28J60-LwIP-Template

./: CMakeLists.txt  LICENSE.md  README.md  main.c
driver/enc28j60/: enc28j60.c
lwip/: enc28j60-ethernetif.c  lwipopts.h  nosys.c
lwip/arch/: cc.h
